<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="15dp"
        app:cardCornerRadius="10dp"
        app:cardElevation="10dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:padding="10dp">

            <androidx.constraintlayout.widget.Guideline
                android:id="@+id/guideline60"
                android:layout_width="1dp"
                android:layout_height="match_parent"
                android:orientation="vertical"
                app:layout_constraintGuide_percent=".6" />

            <TextView
                android:id="@+id/tv_date_time"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/date"
                android:textSize="16sp"
                android:textStyle="bold"
                app:layout_constraintEnd_toStartOf="@+id/guideline60"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <ImageView
                android:id="@+id/rc_iv_weather_type"
                android:layout_width="100dp"
                android:layout_height="100dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="@+id/guideline60"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/tv_ref_temp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="10dp"
                android:text="@string/max_temp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tv_date_time" />

            <TextView
                android:id="@+id/rc_tv_max_temp"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:gravity="end"
                android:padding="10dp"
                app:layout_constraintEnd_toStartOf="@+id/guideline60"
                app:layout_constraintStart_toEndOf="@+id/tv_ref_temp"
                app:layout_constraintTop_toBottomOf="@+id/tv_date_time" />

            <TextView
                android:id="@+id/rc_tv_rf_min_temp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="10dp"
                android:text="@string/min_temp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tv_ref_temp" />

            <TextView
                android:id="@+id/rc_tv_min_temp"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:gravity="end"
                android:padding="10dp"
                app:layout_constraintEnd_toStartOf="@+id/guideline60"
                app:layout_constraintStart_toEndOf="@+id/rc_tv_rf_min_temp"
                app:layout_constraintTop_toBottomOf="@+id/rc_tv_max_temp" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.cardview.widget.CardView>

</androidx.constraintlayout.widget.ConstraintLayout>